app/k8s/azure/yaml/app-server-stateless.yaml

#####################################################################
######################### STATELESS BACKEND #########################
# Service for Stateless containers, listening on port 3000
apiVersion: v1
kind: Service
metadata:
  name: app-server-stateless
spec:
  type: ClusterIP
  selector:
    app: stateless
    tier: backend
  ports:
  - port: 3001
    name: http
    targetPort: http-stateless
---
# Deployment for pocbackend containers, listening on port 3000
apiVersion: apps/v1
kind: Deployment
metadata:
  name: stateless-backend
spec:
  replicas: 3
  selector:
    matchLabels:
      app: stateless
      tier: backend
  template:
    metadata:
      labels:
        app: stateless
        tier: backend
    spec:
      imagePullSecrets:
      - name: demok8s-registry-pull-secret
      containers:
      - name: app-server 
        imagePullPolicy: Always
        image: pock8sregistry.azurecr.io/app-server:1.0        
        ports:
           - name: http-stateless
             containerPort: 3000        
        volumeMounts:
           - mountPath : /log
             name: log-volume
           - mountPath : /config
             name: config-volume
      volumes:
       - name: log-volume
         azureFile:
          shareName: demok8ssmb
          secretName: demok8s-fileshare-secret
          readOnly: false
       - name: config-volume
         azureFile:
          shareName: demok8ssmb
          secretName: demok8s-fileshare-secret
          readOnly: false
