app/k8s/azure/yaml/db-azure.yaml
kind: Service
apiVersion: v1
metadata:
  name: pg-svc  
spec: 
  type: ExternalName
  externalName: demok8spg.postgres.database.azure.com
  ports:
    - name: port
      port: 5432
